<resources>
    <string name="app_name">GeekOn</string>
    <string name="login_text">Login</string>
    <string name="sign_upText">Sign Up</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="set">Set Location</string>
    <string name="nickname">Nick Name</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="submit">Submit</string>
    <string name="addUser">Add new user</string>
    <string name="displayList">Display List</string>
    <string name="displayMap">Display Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_set_map_location">Map</string>
    <string name="title_activity_set_location_map">Map</string>
    <string name="title_activity_delete_map">Map</string>
    <string name="title_activity_delete1">Map</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="minimum_password">Password should be of length 6 at least!</string>
    <string name="email">Email</string>
    <string name="emailHint">abc@xyz.com</string>
    <string name="title_activity_map_view_display">Map</string>
    <string name="user_welcome">Select option \n 1.View list of users and tap to chat \n 2.View users of map and tap nickname to chat \n 3.View all chats \n 4.Logout</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="java">Java</string>
    <string name="html">HTML/CSS</string>
    <string name="c">C++</string>
    <string name="android">Android</string>

</resources>

